--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-  <!-- Your code here -->
-
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion Roaring image">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion Roaring image" title="The king of the jungle">
 </body>
 </html>
